--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,30 @@ h1 {
   flex-direction: column;
 }
 
+.movie-container{
+  width: 100%;
+  margin-top: 3rem;
+  gap: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  .empty {
+    width: 100%;
+    margin-top: 3rem;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .empty h2 {
+    font-size: 1.25rem;
+    color: #f9d3b4;
+    font-family: var(--font-raleway);
+  }
+}
+
 .search-bar{
   border-radius: 3rem;
   width: 75%;
